styles.css
/* ... */
.contact .inputBox {
    width: 300px;
    height: 40px;
    margin: 15px;
}

.contact .textArea {
    height: 80px;
}

.booking form {
    margin: 40px 60px;
    text-align: center;
}

.booking .inputBox {
    width: 500px;
    height: 40px;
    margin: 15px;
}

.booking .textArea {
    height: 90px;
}

.inputBox input,
.inputBox textarea {
    width: 100%;
    height: 100%;
    resize: none;
    padding: 10px;
}

.btnArea input {
    padding: 10px 20px;
    font-size: 1rem;
    background-color:rgb(3, 42, 3);
    color: white;
    font-weight: 600;
    border: none;
    cursor: pointer;
}

/* About Styles */

.about {
    width: 100%;
    height: 100%;
}

.about .partOne,
.about .partTwo,
.about .partThree {
    text-align: left;
    flex-direction: column;
    height: 100%;
    width: 70%;
}

.about .partTwo ol {
    margin: 20px;
    font-size: 18px;
}

.about .partOne h3,
.about .partTwo h3,
.about .partThree h3 {
    font-size: 1.7rem;
    color: rgb(3, 42, 3);
}

.about .partTwo .imgContainer {
    margin: 20px 15px;
}

.about .partTwo .imgContainer img {
    height: 550px;
}

.about .partOne .textContainer,
.about .partTwo .textContainer,
.about .partThree .textContainer {
    margin: 60px 15px;

}

.col2Container {
    display: flex;
    flex-direction: row;
    height: 100%;
}

.sidebar {
    display: flex;
    flex-direction: column;
    padding: 15px;
    text-align: left;
    font-size: 14px;
    width: 150px;
    gap: 20px;
    background-color: rgb(189, 215, 189);
}

.sidebar .linkCont a {
    text-decoration: none;
    color: black;
    font-weight: 500;
    margin: 20px 0;
}

.sidebar a:hover,
.sidebar a:focus {
    color: rgb(3, 42, 3);
}

.sidebar h5 {
    margin-top: 15px;
    font-size: 20px;
    color: rgb(3, 42, 3);
}

.backToTop {
    text-decoration: none;
    color: rgb(3, 42, 3);
    font-weight: 700;
    margin: 20px;
    align-self: flex-end;
}

/* Events Styles */

.events {
    display: flex;
    justify-content: start;
    align-items: center;
}

table {
    display: inline-block;
    margin-top: 50px;
    width: 100%;
    border-collapse: collapse;
    padding: 20px;
}

table thead th {
    font-size: 1.3rem;
    color: rgb(3, 42, 3);
    text-align: left;
    padding-right: 50px;
}

table tbody td {
    font-size: 0.8rem;
    text-align: left;
    padding-right: 50px;
}

table a {
    text-decoration: none;
    color: rgb(3, 42, 3);
    font-weight: 500;
}

table a:hover,
table a:focus {
    color: rgb(143, 179, 143);
}

.tableContainer {
    overflow-x: auto;
    width: 100%;

}

/* Dining/Catering */

.dining {
    background-color: rgb(189, 215, 189);
    display: flex;
    flex-direction: column;
}

.dining .start {
    margin: 20px 0;
    text-align: left;
    max-width: 900px;
    height: 100%;
    gap: 80px;
}

.dining .col50 {
    width: 50%;
    height: 50%;
}

.dining .gifContainer img {
    border: none;
    overflow: hidden;
    height: 50%;
    width: 100%;
    object-fit: contain;
}

.cards {
    height: 100%;
    margin: 30px 0;
}

.card {
    height: 500px;
    width: 350px;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: white;
    margin: 0 40px;
    padding: 40px;
    gap: 40px;
    box-shadow: 2px 4px 12px black;
}

.card h3 {
    font-size: 1.7rem;
}

.card img {
    overflow: hidden;
    width: 100%;
    height: 50%;
    object-fit: cover;
}


/* Footer Styles */

footer {
    width: 100%;
    height: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(3, 42, 3);
    color: white;
}
/* ... */

